# rust_rp2040_template

./: .gitignore  Cargo.toml  README.md  build.rs  release.py
.cargo/: config.toml  config.toml~
src/: README.txt  foo.uf2  main.rs  release.py
