[package]
authors = ["Nicholas Weaver, based on Kevin Asbury <kevin@fullstacklabs.co>"]
edition = "2021"
readme = "README.md"
name = "testapp"
version = "0.1.0"

# Updated to latest
[dependencies]
rp-pico = "0.6.0"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.2"
embedded-time = "0.12.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
rp2040-hal = { version="0.7.0", features=["rt"] }
rp2040-boot2 = "0.2.0"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
embedded-hal ="0.2.7"
panic-halt= "0.2.0"
fugit="0.3.6"

# this lets you use `cargo fix`!
[[bin]]
name = "testapp"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
panic = 'abort'
lto = true
opt-level = "z"
incremental = false
strip = true

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
